<resources>
    <string name="app_name">L04 reservation</string>
    <string name="mobile_number">Mobile Number:</string>
    <string name="enter_your_mobile_number">Enter your Mobile Number</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="name">Name:</string>
    <string name="size_of_the_group">Size of the Group:</string>
    <string name="enter_size_of_group">Enter size of Group</string>
    <string name="reservation_time_and_date">Reservation Time and Date</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="smoking">Smoking</string>
    <string name="non_smoking">Non-Smoking</string>
    <string name="confirm">CONFIRM</string>
    <string name="reset">RESET</string>
    <string name="table_type">Table Type</string>
    <string name="details">Details</string>
</resources>